<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:paddingHorizontal="20dp"
    android:paddingTop="20dp"
    android:paddingBottom="28dp"
    app:behavior_hideable="false"
    app:behavior_peekHeight="44dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <View
        android:id="@+id/handler_bottom_sheet"
        android:layout_width="54dp"
        android:layout_height="4dp"
        android:background="@drawable/bg_handler_bottom_sheet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:text="@string/current_location"
        android:textColor="@color/primary_color"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/handler_bottom_sheet" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:contentDescription="@string/current_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_location"
        app:srcCompat="@drawable/ic_location" />

    <TextView
        android:id="@+id/tv_current_lcoation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/default_text"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />


    <TextView
        android:id="@+id/tv_photo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/your_photo"
        android:textColor="@color/primary_color"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_current_lcoation" />

    <ImageView
        android:id="@+id/iv_capture_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/bg_capture_photo"
        android:contentDescription="@string/your_photo"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_max="200dp"
        app:layout_constraintHeight_min="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_photo"
        app:srcCompat="@drawable/ic_photo_camera" />

    <Button
        android:id="@+id/btn_check_in"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:background="@drawable/bg_btn_primary"
        android:text="@string/check_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_capture_photo" />
</androidx.constraintlayout.widget.ConstraintLayout>