<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardBackgroundColor="@color/divider"
    app:cardCornerRadius="20dp"
    app:cardElevation="0dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/calendarViewHistory">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <LinearLayout
            android:id="@+id/container_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn_primary"
            android:gravity="center"
            android:minHeight="80dp"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_current_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_text"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="27" />

            <TextView
                android:id="@+id/tv_current_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_text"
                android:textColor="@color/white"
                tools:text="September" />
        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.33" />

        <TextView
            android:id="@+id/tv_check_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_in"
            android:textAllCaps="true"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tv_time_check_in"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toEndOf="@id/guideline1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tv_time_check_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_text"
            android:textColor="@color/green"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/tv_check_in"
            app:layout_constraintStart_toStartOf="@id/tv_check_in"
            app:layout_constraintTop_toBottomOf="@id/tv_check_in"
            tools:text="12:00" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.66" />

        <TextView
            android:id="@+id/tv_check_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_out"
            android:textAllCaps="true"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tv_time_check_out"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tv_time_check_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_text"
            android:textColor="@color/red"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/tv_check_out"
            app:layout_constraintStart_toStartOf="@id/tv_check_out"
            app:layout_constraintTop_toBottomOf="@id/tv_check_out"
            tools:text="12:00" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>